--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="DDtQuhGses2dbnFX56XFlh41x4ftvc-ePlzjb3BqipI" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Comprehensive review warning about the scam broker vmbit.com. Find out why it's not legit and how to protect yourself from fraud.">
